@@ -145,7 +145,7 @@ void http_connection::get(std::string const& url, time_duration timeout, int pri
 		return;
 	}
 
-	TORRENT_ASSERT(prio >= 0 && prio < 2);
+	TORRENT_ASSERT(prio >= 0 && prio < 3);
 
 	bool ssl = false;
 	if (protocol == "https") ssl = true;
@@ -212,7 +212,7 @@ void http_connection::start(std::string const& hostname, std::string const& port
 #endif
 	)
 {
-	TORRENT_ASSERT(prio >= 0 && prio < 2);
+	TORRENT_ASSERT(prio >= 0 && prio < 3);
 
 	m_redirects = handle_redirects;
 	if (ps) m_proxy = *ps;
